--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,18 @@
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-12">
       <h1> {{ title }} </h1>
-      <hr/>
+      <hr/> -->
       <!-- <app-servers><app-servers> -->
       <!-- <app-servers></app-servers> -->
       <!-- <div><app-server></div> -->
       <!-- <app-tugas3></app-tugas3> -->
      
       <!-- <div class="app-server"></div> -->
-      <app-pegawai></app-pegawai>
-    </div>
+      <!-- <app-pegawai></app-pegawai> -->
+      
+  <!-- </div>
   </div>
-</div>
+</div> -->
+<app-mahasiswa></app-mahasiswa>
 
