--- a/src/app/pegawai/pegawai.component.html
+++ b/src/app/pegawai/pegawai.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -12,9 +13,10 @@
       <label for="jk">Jenis Kelamin</label>
       <input type="text" class="form-control" [(ngModel)] = "jk">
       <br>
-      <button class="btn btn-primary"(click)="tambahPegawai()">Tambah</button>
+      <button class="btn btn-primary btn-block"(click)="tambahPegawai()">Tambah</button>
     </div>
   </div>
+
   <div class="row" *ngFor="let pegawai of daftarPegawai">
     <div class="col-md-12">
       <h2>{{ pegawai.nama }}</h2>
@@ -22,7 +24,7 @@
       <p>{{ pegawai.alamat }}</p>
       <p>{{ pegawai.jk }}</p>
     </div>
-
   </div>
-</div>
+  </div>
+
 
